Restore and update index.html template

--- a/index.html
+++ b/index.html
@@ -232,10 +232,11 @@
       © <span id="year"></span> Deepak — Built with ❤️ using HTML & CSS
     </footer>
   </div>
-
+<p>github pages test</p>
   <script>
     // small helpers for demo
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
+
