--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
-       <a href="Deepak software engineer resume.pdf" class="btn btn-ghost" style="margin-left:10px" download>
+       <a href="Velagaoudi Deepak resume .pdf" class="btn btn-ghost" style="margin-left:10px" download>
   Download CV
 </a>
 
@@ -146,7 +146,7 @@
 
         <aside class="hero-right card">
           <!-- Replace the image below with your portrait. Ideal size: 800x1000 -->
-          <img src="profile pic.jpg" alt="Your photo">
+          <img src="profile image.jpeg" alt="Your photo">
         </aside>
       </section>
 
@@ -229,14 +229,13 @@
     </main>
 
     <footer>
-      © <span id="year"></span> Deepak — Built with ❤️ using HTML & CSS
+      © <span id="year"></span> Deepak
     </footer>
   </div>
-<p>github pages test</p>
+
   <script>
     // small helpers for demo
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
-
